--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
             <h1>Hello Tom</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event received">Changing the description</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
